Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11056

OSS can't connect to MDS after hard reboot

XMLWordPrintable

    • 3
    • 9223372036854775807

      After the OSS was powered off and rebooted, it can't connect to MDS.

      May 17 17:59:49 zfswh2-oss-17-2 kernel: LustreError: 11-0: zfswh2-MDT0000-lwp-OST0006: operation mds_connect to node 10.26.1.1@tcp failed: rc = -114
      May 18 15:12:05 zfswh2-oss-17-2 kernel: Lustre: zfswh2-OST0006: Connection restored to zfswh2-MDT0000-mdtlov_UUID (at 10.26.1.1@tcp)
      May 18 15:12:05 zfswh2-oss-17-2 kernel: Lustre: zfswh2-OST0007: Connection restored to zfswh2-MDT0000-mdtlov_UUID (at 10.26.1.1@tcp)
      May 18 15:12:19 zfswh2-oss-17-2 kernel: Lustre: zfswh2-MDT0000-lwp-OST0005: Connection restored to 10.26.1.1@tcp (at 10.26.1.1@tcp)
      May 18 15:13:09 zfswh2-oss-17-2 kernel: Lustre: Evicted from MGS (at 10.26.1.1@tcp) after server handle changed from 0xf074011de3327f2c to 0xb0f98aa68fc803d9
      May 18 15:13:09 zfswh2-oss-17-2 kernel: Lustre: MGC10.26.1.1@tcp: Connection restored to 10.26.1.1@tcp (at 10.26.1.1@tcp)
      May 18 15:13:34 zfswh2-oss-17-2 kernel: Lustre: zfswh2-MDT0000-lwp-OST0006: Connection restored to 10.26.1.1@tcp (at 10.26.1.1@tcp)
      

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: